# PodGuard

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  fetch_live.py  implementation_plan.md  mkdocs.yml  pyproject.toml  trivy.yaml
.github/actions/epss-scan/: action.yml
.github/workflows/: ci.yml  security.yml
docs/: api-contracts.md  architecture.md  index.md
epss_framework/: __init__.py  cli.py
epss_framework/config/: defaults.yaml  settings.py
epss_framework/enrichment/: epss_client.py  kev_catalog.py
epss_framework/evaluation/: ranking_metrics.py
epss_framework/pipeline/: enrichment_pipeline.py
epss_framework/reachability/: analyzer.py
epss_framework/reports/: report_generator.py
epss_framework/scanner/: trivy_scanner.py
epss_framework/scoring/: composite_scorer.py
epss_framework/tests/integration/: test_pipeline_e2e.py
epss_framework/tests/unit/: test_cli.py  test_database.py  test_enrichment_pipeline.py  test_epss_client.py  test_evaluation.py  test_kev_catalog.py  test_reachability.py  test_scoring.py  test_trivy_scanner.py
epss_framework/utils/: database.py  logging.py  models.py
phase1_demo_reports/: PHASE1_DEMO_REPORT.md  epss_report_alpine_3.18_20260325_215713.json  epss_report_alpine_3.19_20260325_214724.json  epss_report_alpine_3.19_20260325_215707.json  epss_report_busybox_1.36_20260325_215718.json  epss_report_busybox_latest_20260325_215724.json  epss_report_debian_11_20260325_215842.json  epss_report_debian_12_20260325_214844.json  epss_report_debian_12_20260325_215845.json  epss_report_nginx_1.27-alpine_20260325_215903.json  epss_report_node_20-alpine_20260325_220012.json  epss_report_python_3.11-alpine_20260325_215923.json  epss_report_redis_7-alpine_20260325_220030.json  epss_report_ubuntu_20.04_20260325_215748.json  epss_report_ubuntu_22.04_20260325_214756.json  epss_report_ubuntu_22.04_20260325_215752.json  success_images.txt
